# doc-analysis-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_agent.config.yaml  pyproject.toml  requirements.txt  run_tests.py
config/auth/: auth.json
docs/: API.md
docs/examples/: document_types.md
examples/: basic_analysis.py  batch_processing.py  document_summary.py  entity_search.py
src/docanalysis/: cli.py  client.py  config.py  server.py  types.py
src/docanalysis/core/: analysis.py  storage.py  types.py
src/docanalysis/mcp/: server.py
src/docanalysis/mcp/tools/: __init__.py  document_tools.py
src/docanalysis/models/: anthropic_agent.py
tests/: conftest.py  test_doc_analysis_server.py
tests/data/: test_pdfs.py
tests/integration/: test_document_analysis.py  test_document_relationships.py  test_mcp_server.py
tests/integration/mcp/: test_server.py
tests/unit/: test_mcp_protocol.py
tests/unit/core/: test_analysis.py
