[project]
name = "docanalysis-mcp"
version = "0.1.0"
description = "Document Analysis & Summary System using MCP"
authors = [
    {name = "mendo"}
]
dependencies = [
    "mcp-agent>=0.0.8",
    "anthropic>=0.7.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/docanalysis"] 
